unpackaged/main/default/objects/Campaign/fields/Actual_Campaign_Costs__c.field-meta.xml
<CustomField>
    <fullName>Actual_Campaign_Costs__c</fullName>
    <formula>ActualCost +  Actual_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Campaign Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>