unpackaged/main/default/objects/Campaign/fields/Actual_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Actual_Expenses__c</fullName>
    <label>Actual Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>