unpackaged/main/default/objects/Campaign/fields/Actual_Expenses_Core_Service__c.field-meta.xml
<CustomField>
    <fullName>Actual_Expenses_Core_Service__c</fullName>
    <label>Total Spend:Department</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>