unpackaged/main/default/objects/Campaign/fields/Actual_Expenses_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Actual_Expenses_Fiscal_Year__c</fullName>
    <label>Total Spend: Fiscal Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>