unpackaged/main/default/objects/Campaign/fields/Campaign_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Expenses__c</fullName>
    <label>Campaign Expenses</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>