unpackaged/main/default/objects/Campaign/fields/Campaign_Goal__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Goal__c</fullName>
    <label>Campaign Goal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Acquisition</fullName>
            </value>
            <value>
                <fullName>Cross-Sell</fullName>
            </value>
            <value>
                <fullName>Win-Back</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>