unpackaged/main/default/objects/Campaign/fields/Campaign_ROI__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ROI__c</fullName>
    <formula>( Total_Value_Won_Opportunities__c  -  Actual_Campaign_Costs__c  ) /  Actual_Campaign_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign ROI %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>