unpackaged/main/default/objects/Campaign/fields/Campaign_ROI_Godfather__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ROI_Godfather__c</fullName>
    <formula>( Total_ValueWon_Opportunities_Godfather__c -  Total_Campaign_Costs_Godfather__c ) / Total_Campaign_Costs_Godfather__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign ROI % (Godfather)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>