unpackaged/main/default/objects/Campaign/fields/Campaign_ROI_in_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ROI_in_Hierarchy__c</fullName>
    <formula>( Total_Value_Won_Opportunities_Hierarchy__c  -   Total_Campaign_Costs_in_Hierarchy__c ) /   Total_Campaign_Costs_in_Hierarchy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign ROI in Hierarchy %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>