unpackaged/main/default/objects/Campaign/fields/CampaignID_18__c.field-meta.xml
<CustomField>
    <fullName>CampaignID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CampaignID (18)</label>
    <type>Text</type>
</CustomField>