unpackaged/main/default/objects/Campaign/fields/Core_Service__c.field-meta.xml
<CustomField>
    <fullName>Core_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Core Service</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>