unpackaged/main/default/objects/Campaign/fields/Core_Service_ROI__c.field-meta.xml
<CustomField>
    <fullName>Core_Service_ROI__c</fullName>
    <formula>IF( AmountWonOpportunities  = 0, 

0,

IF(Actual_Expenses_Core_Service__c = 0, 

0,


(HierarchyAmountWonOpportunities - Actual_Expenses_Core_Service__c ) / Actual_Expenses_Core_Service__c



))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Service ROI %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>