unpackaged/main/default/objects/Campaign/fields/Core_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Core_Service_Type__c</fullName>
    <description>Core Services</description>
    <label>Core Service_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NCM_Business_Unit</valueSetName>
    </valueSet>
</CustomField>