unpackaged/main/default/objects/Campaign/fields/Creative_Piece__c.field-meta.xml
<CustomField>
    <fullName>Creative_Piece__c</fullName>
    <label>Creative Piece</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Postcard</fullName>
            </value>
            <value>
                <fullName>Self-Mailer</fullName>
            </value>
            <value>
                <fullName>Exhibit Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>