unpackaged/main/default/objects/Campaign/fields/Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Focus_Area__c</fullName>
    <label>Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20 Group</fullName>
            </value>
            <value>
                <fullName>axcessa</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Event / Tradeshow</fullName>
            </value>
            <value>
                <fullName>General NCM</fullName>
            </value>
            <value>
                <fullName>NCM Institute</fullName>
            </value>
            <value>
                <fullName>NCM On-Demand</fullName>
            </value>
            <value>
                <fullName>OEM Project</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Travel Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>