unpackaged/main/default/objects/Campaign/fields/Focus_Area_Detail__c.field-meta.xml
<CustomField>
    <fullName>Focus_Area_Detail__c</fullName>
    <label>Focus Area Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PCM</fullName>
            </value>
            <value>
                <fullName>Service Advisor</fullName>
            </value>
            <value>
                <fullName>UVPIP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Proprietary</fullName>
            </value>
            <value>
                <fullName>NCM Hosted</fullName>
            </value>
            <value>
                <fullName>In-Dealership</fullName>
            </value>
            <value>
                <fullName>Sponsored</fullName>
            </value>
            <value>
                <fullName>Composite</fullName>
            </value>
            <value>
                <fullName>PTA</fullName>
            </value>
            <value>
                <fullName>20 Group</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>