unpackaged/main/default/objects/Campaign/fields/Godfather_Campaign_ROI__c.field-meta.xml
<CustomField>
    <fullName>Godfather_Campaign_ROI__c</fullName>
    <formula>( Total_ValueWon_Opportunities_Godfather__c -  Total_Campaign_Costs_Godfather__c ) / Total_Campaign_Costs_Godfather__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Godfather Campaign ROI %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>