unpackaged/main/default/objects/Campaign/fields/If_Campaign_Goal_Other_Describe__c.field-meta.xml
<CustomField>
    <fullName>If_Campaign_Goal_Other_Describe__c</fullName>
    <label>If Campaign Goal Other, Describe</label>
    <type>TextArea</type>
</CustomField>