unpackaged/main/default/objects/Campaign/fields/If_Other_Describe__c.field-meta.xml
<CustomField>
    <fullName>If_Other_Describe__c</fullName>
    <label>If Other, Describe</label>
    <type>TextArea</type>
</CustomField>