unpackaged/main/default/objects/Campaign/fields/List_Source__c.field-meta.xml
<CustomField>
    <fullName>List_Source__c</fullName>
    <label>List Source</label>
    <length>65</length>
    <type>Text</type>
</CustomField>