unpackaged/main/default/objects/Campaign/fields/Marketing_Project__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Marketing Project</label>
    <referenceTo>Marketing_Project__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>