unpackaged/main/default/objects/Campaign/fields/Marketing_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Project_ID__c</fullName>
    <description>ID of asscoiated Project Name</description>
    <label>Marketing Project ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>