unpackaged/main/default/objects/Campaign/fields/Marketing_Request__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Request</label>
    <referenceTo>Request_Forms__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>