unpackaged/main/default/objects/Campaign/fields/Marketing_Tactic__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Tactic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Tactic</label>
    <referenceTo>Marketing_Tactic__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>