unpackaged/main/default/objects/Campaign/fields/Marketing_Year__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Marketing Year record (Campaign Parent Super Hiearchy)</description>
    <label>Marketing Year</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaigns (Marketing Year)</relationshipLabel>
    <relationshipName>Campaigns4</relationshipName>
    <type>Lookup</type>
</CustomField>