unpackaged/main/default/objects/Campaign/fields/Marketing_Year_ROI__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Year_ROI__c</fullName>
    <formula>IF( AmountWonOpportunities = 0, 

0, 

IF(Actual_Expenses_Fiscal_Year__c = 0, 

0, 


( HierarchyAmountWonOpportunities -  Actual_Expenses_Fiscal_Year__c  ) / Actual_Expenses_Fiscal_Year__c
 



))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Year ROI%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>