unpackaged/main/default/objects/Campaign/fields/NCM_Industry__c.field-meta.xml
<CustomField>
    <fullName>NCM_Industry__c</fullName>
    <label>NCM Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NCM_Industry</valueSetName>
    </valueSet>
</CustomField>