unpackaged/main/default/objects/Campaign/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Specifies the product</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20 Groups</fullName>
            </value>
            <value>
                <fullName>Axcessa</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>NCMi</fullName>
            </value>
            <value>
                <fullName>Travel Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>