unpackaged/main/default/objects/Campaign/fields/Remaining_Pipeline_Value__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Pipeline_Value__c</fullName>
    <inlineHelpText>Remaining amount of all open opportunities</inlineHelpText>
    <label>Remaining Pipeline Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>