unpackaged/main/default/objects/Campaign/fields/ROI_Tactic_ID__c.field-meta.xml
<CustomField>
    <fullName>ROI_Tactic_ID__c</fullName>
    <label>ROI Tactic ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>