unpackaged/main/default/objects/Campaign/fields/Specific_Publication__c.field-meta.xml
<CustomField>
    <fullName>Specific_Publication__c</fullName>
    <label>Specific Publication</label>
    <length>65</length>
    <type>Text</type>
</CustomField>