unpackaged/main/default/objects/Campaign/fields/Tactic_ROI__c.field-meta.xml
<CustomField>
    <fullName>Tactic_ROI__c</fullName>
    <formula>IF( AmountWonOpportunities  = 0, 

0,

IF( Total_Spend__c  = 0, 

0,


(AmountWonOpportunities - Total_Spend__c)/Total_Spend__c



))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tactic ROI %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>