unpackaged/main/default/objects/Campaign/fields/Total_Actual_Expense_in_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Expense_in_Hierarchy__c</fullName>
    <description>Totals Actual Expense from &quot;Actual Expense&quot; (Rollup Helper Calculated field) in all child Campaigns</description>
    <label>Total Actual Expense in Hierarchy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>