unpackaged/main/default/objects/Campaign/fields/Total_Actual_Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Net_Revenue__c</fullName>
    <formula>AmountWonOpportunities -  ActualCost</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Actual Net Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>