unpackaged/main/default/objects/Campaign/fields/Total_Annualized_Revenue_Generated__c.field-meta.xml
<CustomField>
    <fullName>Total_Annualized_Revenue_Generated__c</fullName>
    <label>Total Annualized Revenue Generated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>