unpackaged/main/default/objects/Campaign/fields/Total_Campaign_Costs_Godfather__c.field-meta.xml
<CustomField>
    <fullName>Total_Campaign_Costs_Godfather__c</fullName>
    <label>Total Campaign Costs (Godfather)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>