unpackaged/main/default/objects/Campaign/fields/Total_Hierarchy_Actual_Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Hierarchy_Actual_Net_Revenue__c</fullName>
    <formula>HierarchyAmountWonOpportunities - HierarchyActualCost</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hierarchy Actual Net Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>