unpackaged/main/default/objects/Campaign/fields/Total_Opens__c.field-meta.xml
<CustomField>
    <fullName>Total_Opens__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Opens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>