unpackaged/main/default/objects/Campaign/fields/Total_Opportunities_Godfather__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunities_Godfather__c</fullName>
    <label>Total Opportunities (Godfather)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>