unpackaged/main/default/objects/Campaign/fields/Total_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Spend__c</fullName>
    <formula>Marketing_Project__r.Total_Spend_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Spend:Tactic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>