unpackaged/main/default/objects/Campaign/fields/Total_Value_Opportunities_Godfather__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_Opportunities_Godfather__c</fullName>
    <label>Total Value Opportunities (Godfather)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>