unpackaged/main/default/objects/Campaign/fields/Total_Value_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_Won_Opportunities__c</fullName>
    <label>Total Value Won Opportunities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>