unpackaged/main/default/objects/Campaign/fields/Total_Value_Won_Opportunities_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_Won_Opportunities_Hierarchy__c</fullName>
    <label>Total Value Won Opportunities Hierarchy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>