unpackaged/main/default/objects/Campaign/fields/Total_ValueWon_Opportunities_Godfather__c.field-meta.xml
<CustomField>
    <fullName>Total_ValueWon_Opportunities_Godfather__c</fullName>
    <label>Total ValueWon Opportunities (Godfather)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>