unpackaged/main/default/objects/Campaign/recordTypes/Core_Service_Record.recordType-meta.xml
<RecordType>
    <fullName>Core_Service_Record</fullName>
    <active>true</active>
    <description>Core services campaign record</description>
    <label>Core Service Record</label>
</RecordType>