unpackaged/main/default/objects/Campaign/recordTypes/General_Advertising.recordType-meta.xml
<RecordType>
    <fullName>General_Advertising</fullName>
    <active>true</active>
    <description>NCM generalised marketing record</description>
    <label>General Advertising</label>
</RecordType>