unpackaged/main/default/objects/Campaign/recordTypes/General_Advertising_Tactic.recordType-meta.xml
<RecordType>
    <fullName>General_Advertising_Tactic</fullName>
    <active>true</active>
    <description>General Marketing specific tactic record</description>
    <label>General Advertising Tactic</label>
</RecordType>