unpackaged/main/default/objects/Campaign/recordTypes/Lead_Record_NCM_Business.recordType-meta.xml
<RecordType>
    <fullName>Lead_Record_NCM_Business</fullName>
    <active>true</active>
    <description>NCM Business Lead Bucket</description>
    <label>Lead Record NCM Business</label>
</RecordType>