unpackaged/main/default/objects/Campaign/recordTypes/Marketing_Year_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Year_Campaign</fullName>
    <active>true</active>
    <description>Marketing year record type</description>
    <label>Marketing Year Campaign</label>
</RecordType>