unpackaged/main/default/objects/Campaign/recordTypes/Non_Marketing_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Non_Marketing_Campaign</fullName>
    <active>true</active>
    <description>Used to populate the Primary Campaign Influence field of Opportunities for non marketing efforts</description>
    <label>Non Marketing Campaign</label>
</RecordType>