unpackaged/main/default/objects/Campaign/recordTypes/Tactic_Record.recordType-meta.xml
<RecordType>
    <fullName>Tactic_Record</fullName>
    <active>true</active>
    <description>Tactical level campaign record</description>
    <label>Tactic Record</label>
</RecordType>