unpackaged/main/default/objects/Campaign/recordTypes/Tradeshow.recordType-meta.xml
<RecordType>
    <fullName>Tradeshow</fullName>
    <active>true</active>
    <description>Tradeshow Record</description>
    <label>Tradeshow</label>
</RecordType>