unpackaged/main/default/objects/Campaign/recordTypes/Tradeshow_Tactic.recordType-meta.xml
<RecordType>
    <fullName>Tradeshow_Tactic</fullName>
    <active>true</active>
    <description>Tradeshow Specific Tactic Record</description>
    <label>Tradeshow Tactic</label>
</RecordType>