unpackaged/main/default/objects/Campaign/listViews/All_Active_Campaigns_NCMi.listView-meta.xml
<ListView>
    <fullName>All_Active_Campaigns_NCMi</fullName>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>Marketing_Project__c</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>Total_Opens__c</columns>
    <columns>Total_Clicks__c</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>UTM_Term__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>PARENT_NAME</field>
        <operation>contains</operation>
        <value>Institute</value>
    </filters>
    <label>All Active Campaigns - NCMi</label>
</ListView>