unpackaged/main/default/objects/Campaign/listViews/All_Campaigns1.listView-meta.xml
<ListView>
    <fullName>All_Campaigns1</fullName>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>Marketing_Tactic__c</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.ID</columns>
    <filterScope>Everything</filterScope>
    <label>All Campaigns</label>
</ListView>