unpackaged/main/default/objects/Campaign/listViews/NCMi_Campaigns.listView-meta.xml
<ListView>
    <fullName>NCMi_Campaigns</fullName>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>Marketing_Project__c</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
        <value>2020 NCM Institute</value>
    </filters>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2020</value>
    </filters>
    <label>NCM Institute</label>
</ListView>