unpackaged/main/default/objects/Campaign/listViews/Org_Campaign_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Campaign_Hierarchy</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>Marketing_Tactic__c</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.TOT_OPPORTUNITIES</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Campaign_Hierarchy</label>
</ListView>