unpackaged/main/default/objects/Campaign/listViews/Software_Solutions_Campaigns.listView-meta.xml
<ListView>
    <fullName>Software_Solutions_Campaigns</fullName>
    <columns>Marketing_Project__c</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Campaign_Tactic__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>AMOUNT_ALL</columns>
    <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
    <columns>AMOUNT_WON</columns>
    <columns>Total_Spend__c</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
        <value>2020 Software Solutions</value>
    </filters>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2020</value>
    </filters>
    <label>Software Solutions</label>
</ListView>